# fps.rs

./: Cargo.toml  README.md  minified.rs  minify.sh
src/: lib.rs
