[package]
name = "fps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs-parted-modint = { git = "https://github.com/qryxip/ac-library-rs-parted.git" }
ac-library-rs-parted-convolution = { git = "https://github.com/qryxip/ac-library-rs-parted.git" }